--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -5,9 +5,11 @@
     <base href="/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    
+    
 
     <!-- Main Angular Files -->
     <script src="assets/js/angular.js"></script>
@@ -29,11 +31,25 @@
     <script src="app/services/authServices.js"></script>
 
     <!-- Cascade Style Sheets -->
+    
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/animate.css"> 
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+    
+
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
+
+    <!-- Bootstrap CSS -->
+    
+    
 
     <title>Taco Cart</title>
 
@@ -41,23 +57,48 @@
 
 <body ng-app="userApp">
    <!-- Collect the nav links, forms, and other content for toggling -->
-   <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Taco Cart</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-      </ul>
-    </div>
-  </nav>
+   <div class="container">
+	
+	<nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">La Taco</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto topnav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Order</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">HireMe</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn text-white" type="button" href="signin.html">Sign In</a>                  
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn text-white" type="button" href="app/views/register.html">Register</a>
+                </li>
+            </ul>
+        </div>
+
+    </nav>
+      
+</div>
   <header>
       <div class="container">
-          <div class="intro-text"> 
-           
+          <div class="intro-text">            
             <div class="intro-heading">Taco Cart</div>
             <div class="intro-lead-in">Food as Fuel!</div>
           </div>
