--- a/public/app/views/checkout.html
+++ b/public/app/views/checkout.html
@@ -4,18 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>check-out-page</title>
-  <link rel="stylesheet" href="./checkout.css">
+  <link rel="stylesheet" href="checkout.css">
+  <link
+  rel="stylesheet"
+  type="text/css"
+  href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
+/>
 </head>
-<body>
-  <h1>Proceed To Check-Out</h1>
-  <!--Radio Buttons displaying valis options for check-out-->
-  <div class='radio-options'>
+<body class="bg-dark">
+  <!--Radio Buttons displaying valid options for check-out-->
+  <div id="radios-parent" class="container  border rounded bg-light w-50 mx-auto mt-5 p-3">
+    <h4>Proceed To Check-Out</h4>
+  <div class="radio-options">
+
+    <div class="rad">
     <input type="radio" id='pickUp' name='checkOutOption' value="Pick Up">
     <label for='pickUp'>Pick Up</label>
+  </div>
+<div class="rad">
     <input type="radio" id='cod' name='checkOutOption' value="Cash On Delivery">
     <label for='cod'>Cash On Delivery</label>
+  </div>
+<div class="rad">
     <input type="radio" id='card' name='checkOutOption' value="Card Payment">
     <label for="card">Card Payment</label>
   </div>
+
+  </div>
+</div>
 </body>
 </html>
