--- a/public/app/views/checkout.html
+++ b/public/app/views/checkout.html
@@ -9,37 +9,50 @@
   
   <title>check-out-page</title>
 
-  <link rel="stylesheet" type="text/css"href="assets/css/checkout.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/checkout.css">
+
+  <!-- <script src="//code.angularjs.org/1.8.0/angular.min.js"></script>
+  <script src="//code.angularjs.org/1.8.0/angular-animate.js"></script>
+  <script src="assets/js/checkout.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 
 </head>
 
-<body>
+<body ng-app="">
 
   <header class="user__header">
     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3219/logo.svg" alt="" />
     <h4 class="user__title">Tasty Meal waiting for You!!!</h4>
   </header>
 
-  <section class="grid-container" >
+  <!-- <div ng-controller="radio__option"> -->
+    <section class="grid-container" >
 
-    <div class="heading" ><h4>Choose Check-Out Option</h4></div>
+      <div class="heading" ><h4>Choose Check-Out Option</h4></div>
+      
+        <div class="radio Button1">
+          <input ng-model="selection" type="radio" id='pickUp' name='checkOutOption' value="Pick Up">
+          <label for='pickUp'><b>Pick Up</b></label>
+        </div>
 
-    <div class="radio Button1">
-      <input type="radio" id='pickUp' name='checkOutOption' value="Pick Up">
-      <label for='pickUp'><b>Pick Up</b></label>
+        <div class="radio Button2">
+          <input ng-model="selection" type="radio" id='cod' name='checkOutOption' value="Cash On Delivery">
+          <label for='cod'><b>Cash On Delivery</b></label>
+        </div>
+
+        <div class="radio Button3" >
+          <input ng-model="selection" type="radio" id='card' name='checkOutOption' value="Card Payment">
+          <label for='card'><b>Card Payment</b></label>
+        </div>
+        
+
+    </section>
+  <h1>Hello</h1>
+    <div ng-switch="selection">
+      <div ng-switch-when="Pick Up"><h1>Pick Up</h1> </div>
+      <div ng-switch-when="Cash On Delivery"><h1>Cash On Delivery</h1> </div>
+      <div ng-switch-when="Card Payment"><h1>Card Payment</h1> </div>
     </div>
-
-    <div class="radio Button2">
-      <input type="radio" id='cod' name='checkOutOption' value="Cash On Delivery">
-      <label for='cod'><b>Cash On Delivery</b></label>
-    </div>
-
-    <div class="radio Button3" >
-      <input type="radio" id='card' name='checkOutOption' value="Card Payment">
-      <label for='card'><b>Card Payment</b></label>
-    </div>
-
-  </section>
 
 </body>
 </html>
