added login page

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -85,7 +85,7 @@
                     <a class="nav-link" href="#">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn text-white" type="button" href="signin.html">Sign In</a>                  
+                    <a class="nav-link btn text-white" type="button" href="app/views/login.html">Sign In</a>                  
                 </li>
                 <li class="nav-item">
                     <a class="nav-link btn text-white" type="button" href="app/views/register.html">Register</a>
