--- a/public/app/views/login.html
+++ b/public/app/views/login.html
@@ -5,8 +5,9 @@
     <base href="/">
     <meta charset="utf-8">
     
-    <!-- Cascade Style Sheets -->
     
+    <link rel="stylesheet" type="text/css" href="assets/css/register.css">
+
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css"> 
@@ -22,7 +23,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     
 
-    <link rel="stylesheet" type="text/css" href="assets/css/register.css">
     
     <title>register</title>
 
@@ -81,15 +81,12 @@
                 <input type="text" placeholder="Username" class="form__input" required ="true"/>
             </div>
             
-            <div class="form__group">
-                <input type="email" placeholder="Email" class="form__input" required ="true"/>
-            </div>
             
             <div class="form__group">
                 <input type="password" placeholder="Password" class="form__input" required ="true"/>
             </div>
             
-            <button class="btn btn-primary" type="button">Register</button>
+            <button class="btn btn-primary" type="button">Log In</button>
         </form>
     </div>
     
