--- a/public/app/views/checkout.html
+++ b/public/app/views/checkout.html
@@ -99,20 +99,20 @@
         
         <section class="cod__grid">
 
-          <form action="#" method="POST" class="form">
+          <form action="/checkOutStatus" method="POST" class="form">
            
             <div class="codheading" ><h2>Delivary Address</h2></div> 
 
              <div class="form-group">
-               <input type="text" placeholder="Address Line 1" class="form__input" id="Addr1" required/>
+               <input type="text" placeholder="Address Line 1" name="addressLine1" class="form__input" id="Addr1" required/>
               </div>
 
               <div class="form-group">
-                <input type="text" placeholder="Address Line 2" class="form__input" id="Addr2" required/>
+                <input type="text" placeholder="Address Line 2" name="addressLine2" class="form__input" id="Addr2" required/>
                </div>
 
                <div class="form-group">
-                <input type="number" placeholder="Phone Number" class="form__input" id="pno" required/>
+                <input type="number" placeholder="Phone Number" name="phoneNumber" class="form__input" id="pno" required/>
                </div>
       
              <div class = "btn btn-toolbar" id="buttons">
