hire me page - 1

--- a/public/app/views/register.html
+++ b/public/app/views/register.html
@@ -47,7 +47,7 @@
                      <a class="nav-link" href="#">Order</a>
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="#">HireMe</a>
+                     <a class="nav-link" href="app/views/hireMe.html">HireMe</a>
                  </li>
                  <li class="nav-item">
                      <a class="nav-link" href="#">About</a>
