--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -74,7 +74,7 @@
                     <a class="nav-link" href="#">Order</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">HireMe</a>
+                    <a class="nav-link" href="app/views/hireMe.html">HireMe</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
