about page added

--- a/public/app/views/register.html
+++ b/public/app/views/register.html
@@ -50,9 +50,8 @@
                      <a class="nav-link" href="app/views/hireMe.html">HireMe</a>
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="#">About</a>
-                 </li>
-                 
+                    <a class="nav-link" href="app/views/about.html">About Us</a>
+                </li>
                  
                  <li class="nav-item">
                      <a class="nav-link" href="#">Contact</a>
