--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -77,7 +77,7 @@
                     <a class="nav-link" href="app/views/hireMe.html">HireMe</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="app/views/about.html">About Us</a>
                 </li>
                 
                 
