--- a/public/app/views/hireMe.html
+++ b/public/app/views/hireMe.html
@@ -76,12 +76,12 @@
 
           <div class="item">
             <label for="name">Name<span>*</span></label>
-            <input id="name" type="text" name="name" input class="form-control input-sm"required/>
+            <input id="name" type="text" name="name" placeholder="First Last" required/>
           </div>
           
           <div class="item">
             <label for="email">Email Address<span>*</span></label>
-            <input id="email" type="email" name="email" required/>
+            <input id="email" type="email" name="email" placeholder="abc@gmail.com" required/>
           </div>
           <div class="item">
             <label for="address">Address<span>*</span></label>
@@ -89,19 +89,19 @@
           </div>
           <div class="item">
             <label for="city">City<span>*</span></label>
-            <input id="city" type="text" name="city" required/>
+            <input id="city" type="text" name="city" placeholder="Portland" required/>
           </div>
           <div class="item">
             <label for="state">State<span>*</span></label>
-            <input id="state" type="text" name="state" required/>
+            <input id="state" type="text" name="state" placeholder="Oregon" required/>
           </div>
           <div class="item">
             <label for="zip">Zip<span>*</span></label>
-            <input id="zip" type="number" name="zip" pattern="[0-9]{6}" required/>
+            <input id="zip" type="number" name="zip" pattern="[0-9]{6}" placeholder="97001" required/>
           </div>
           <div class="item">
             <label for="phone">Phone<span>*</span></label>
-            <input id="phone" type="number" name="phone"  pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required/>
+            <input id="phone" type="number" name="phone" placeholder="503-291-3478" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required/>
           </div>
           <div class="item">
             <label for="bdate">Date of Birth<span>*</span></label>
@@ -133,7 +133,7 @@
                 </select>
             </div>
           </div>
-          <div>
+          <div class="item">
               <label for="textbox">Tell me about yourself</label>
                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
           </div>
