--- a/public/app/views/about.html
+++ b/public/app/views/about.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="#">Order</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">HireMe</a>
+                        <a class="nav-link" href="#">Hire Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="app/views/about.html">About Us</a>
@@ -100,6 +100,36 @@
          </div>
    
     </div>  
+
+    <footer >
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright © TeamFullStack</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="#" class="fa fa-facebook"></a>
+                        </li>
+                        <li><a href="#" class="fa fa-twitter"></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
+
 </body>
 
 </html>
