--- a/public/app/views/register.html
+++ b/public/app/views/register.html
@@ -43,11 +43,14 @@
                  <li class="nav-item active">
                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                  </li>
+                 <li class="nav-item active">
+                    <a class="nav-link" href="app/views/menu.html">Menu <span class="sr-only">(current)</span></a>
+                </li>
                  <li class="nav-item">
                      <a class="nav-link" href="#">Order</a>
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="app/views/hireMe.html">HireMe</a>
+                     <a class="nav-link" href="app/views/hireMe.html">Hire Me</a>
                  </li>
                  <li class="nav-item">
                     <a class="nav-link" href="app/views/about.html">About Us</a>
@@ -91,6 +94,8 @@
             <button class="btn btn-primary" type="button">Register</button>
         </form>
     </div>
+
+    
     
 </body>
 
