--- a/public/app/views/hireMe.html
+++ b/public/app/views/hireMe.html
@@ -6,11 +6,19 @@
     <meta charset="utf-8">
     
     <!-- Cascade Style Sheets -->
+    <link rel="stylesheet" type="text/css" href="assets/css/hireMeStyle.css">
+
     
+    <!-- Main Angular Files -->
+    <script src="assets/js/angular.js"></script>
+    <script src="assets/js/angular-route.js"></script>
+    <script src="assets/js/angular-animate.js"></script>
+
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css"> 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/hireMeStyle.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
     
 
     <!-- Add icon library -->
@@ -21,8 +29,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     
 
-    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
-    
+
     <title>Hire Me</title>
 
 </head>
@@ -42,6 +49,9 @@
                  <li class="nav-item active">
                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                  </li>
+                 <li class="nav-item active">
+                  <a class="nav-link" href="app/views/menu.html">Menu <span class="sr-only">(current)</span></a>
+                </li>
                  <li class="nav-item">
                      <a class="nav-link" href="#">Order</a>
                  </li>
@@ -109,7 +119,7 @@
             <i class="fas fa-calendar-alt"></i>
           </div>
           <div class="question">
-            <label>Gender</label>
+            <label>Gender<span>*</span></label>
             <div class="question-answer">
               <div>
                 <input type="radio" value="none" id="radio_1" name="gender"/>
@@ -122,9 +132,9 @@
             </div>
           </div>
           <div class="item">
-            <label>Prefered Shift</label>
+            <label>Prefered Shift<span>*</span></label>
             <div>
-                <select>
+                <select required>
                     <option selected value="" disabled selected></option>
                     <option value="course-type" >7AM - 11AM</option>
                     <option value="short-courses">11AM - 3PM</option>
@@ -134,15 +144,71 @@
             </div>
           </div>
           <div class="item">
-              <label for="textbox">Tell me about yourself</label>
-               <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+              <label for="textbox">Tell me about yourself<span>*</span></label>
+               <textarea id="subject" name="subject" placeholder="Write something.." style="height:100px" required></textarea>
           </div>
           <div class="btn-block">
-            <button type="submit" href="/"><span class="glyphicon glyphicon-send"></span> Hire</button>
+            <button type="submit" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-send"></span> Hire</button>
           </div>
         </form>
+    </div>
+
+    <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">La Taco</h4>
+        </div>
+        <div class="modal-body">
+          <p>You have successfully submitted your application. We will get back to you soon. Thanks for applying :)</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Exit</button>
+        </div>
       </div>
-     
+      
+    </div>
+  </div>
+
+    <footer >
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright © TeamFullStack</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="#" class="fa fa-facebook"></a>
+                        </li>
+                        <li><a href="#" class="fa fa-twitter"></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+      
+<!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="assets/js/jquery-3.1.1.min.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
     
 </body>
 
