Adding card payment form page

--- a/public/app/views/checkout.html
+++ b/public/app/views/checkout.html
@@ -99,7 +99,7 @@
         
         <section class="cod__grid">
 
-          <form action="/cashPay" method="POST" class="form">
+          <form action="/cashPay/pay_method" method="POST" class="form">
            
             <div class="codheading" ><h2>Delivary Address</h2></div> 
 
